# generic_delta_canard_fighter_6dof

./: README.md  pyproject.toml  requirements.txt
examples/: run_01_atmosphere_demo.py
generic_delta_canard_fighter_6dof/: atmosphere.py  constants.py  equations.py  geometry.py  integrators.py  kinematics.py  quaternions.py  state.py  transforms.py  units.py
tests/: test_atmosphere.py  test_geometry.py  test_integrators.py  test_kinematics  test_quaternions.py  test_state.py  test_transforms.py
